--- a/ChatApp/res/layout/activity_contact_detail.xml
+++ b/ChatApp/res/layout/activity_contact_detail.xml
@@ -4,5 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ContactDetailActivity"
-    tools:ignore="MergeRootFrame" />
+    tools:ignore="MergeRootFrame" > 
+    
+    
+    
+    
+    </FrameLayout>
 
