--- a/ChatApp/res/layout/fragment_contact_detail.xml
+++ b/ChatApp/res/layout/fragment_contact_detail.xml
@@ -1,10 +1,23 @@
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ViewGroup xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+
+<TextView 
     android:id="@+id/contact_detail"
     style="?android:attr/textAppearanceLarge"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
     android:textIsSelectable="true"
-    tools:context=".ContactDetailFragment" />
+    tools:context=".ContactDetailFragment">
+    
+    </TextView>
 
+<Button
+            android:id="@+id/detail_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="41dp"
+            android:text="@string/button_click"
+            android:onClick="detailClick" />
+
+</ViewGroup> 
