--- a/FragmentDemo/res/layout/article_view.xml
+++ b/FragmentDemo/res/layout/article_view.xml
@@ -14,10 +14,32 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal" >
+    
+    <EditText android:id="@+id/edit_message"
+        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="@string/edit_message" />
+    
+    <Button 
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/button_send"
+        android:onClick="sendMessage"
+        />
+    
+	</LinearLayout>
 
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    
+<!--<TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/article"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
     android:textSize="18sp" />
+ -->
