--- a/FragmentDemo/res/layout/contacts_view.xml
+++ b/FragmentDemo/res/layout/contacts_view.xml
@@ -18,4 +18,11 @@ limitations under the License.
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/fragment_container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="match_parent"> 
+    
+    <ListView android:id="@+id/contacts_list"
+               android:layout_width="match_parent"
+               android:layout_height="match_parent"
+               android:background="#00FF00"
+               android:drawSelectorOnTop="false"/>
+    </FrameLayout>
