--- a/FragmentDemo/res/menu/chat_menu.xml
+++ b/FragmentDemo/res/menu/chat_menu.xml
@@ -1,5 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
+    <item
+        android:id="@+id/item_add_contact"
+        android:icon="@android:drawable/ic_input_add"
+        android:showAsAction="always"
+        android:title="@string/add_user_prompt">
+    </item>
+    
         <item
         android:id="@+id/item_full_screen"
         android:icon="@android:drawable/ic_menu_zoom"
@@ -8,7 +15,7 @@
     </item>
     
     <item
-        android:id="@+id/item_settings"
+        android:id="@+id/item_change_username"
         android:icon="@android:drawable/presence_online"
         android:showAsAction="always|withText"
         android:title="@string/ui_menu_user">
